RESOLVED FIXED173850
WebsiteDataStore::fetchDataForTopPrivatelyControlledDomains() is inefficient
https://bugs.webkit.org/show_bug.cgi?id=173850
Summary WebsiteDataStore::fetchDataForTopPrivatelyControlledDomains() is inefficient
Chris Dumez
Reported 2017-06-26 14:21:30 PDT
WebsiteDataStore::fetchDataForTopPrivatelyControlledDomains() is inefficient. Work towards <rdar://problem/32984366>.
Attachments
Patch (16.95 KB, patch)
2017-06-26 14:26 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-06-26 14:26:00 PDT
Chris Dumez
Comment 2 2017-06-26 14:27:19 PDT
We should also look into doing the work that WebsiteDataStore::fetchDataForTopPrivatelyControlledDomains() is doing off main-thread since the operation is asynchronous and expensive.
Build Bot
Comment 3 2017-06-26 14:28:16 PDT
Attachment 313868 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebProcessProxy.cpp:212: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebProcessProxy.h:144: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2017-06-26 20:33:15 PDT
Comment on attachment 313868 [details] Patch Clearing flags on attachment: 313868 Committed r218827: <http://trac.webkit.org/changeset/218827>
WebKit Commit Bot
Comment 5 2017-06-26 20:33:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.